compiler/danubec_lex/src/snapshots/danubec_lex__tests__binary.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        BINARY_START,
        "0b",
    ),
    (
        BINARY_SEGMENT,
        "0101",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BINARY_START,
        "0b",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        BINARY_SEGMENT,
        "0101",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BINARY_START,
        "0b",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        BINARY_SEGMENT,
        "0101",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BINARY_START,
        "0b",
    ),
    (
        BINARY_SEGMENT,
        "01",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        BINARY_SEGMENT,
        "01",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BINARY_START,
        "0b",
    ),
    (
        BINARY_SEGMENT,
        "01",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        BINARY_SEGMENT,
        "01",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BINARY_START,
        "0b",
    ),
    (
        BINARY_SEGMENT,
        "0101",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        BINARY_START,
        "0b",
    ),
    (
        BINARY_SEGMENT,
        "0101",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
]
