compiler/danubec_lex/src/snapshots/danubec_lex__tests__char.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        CHARACTER_START,
        "'",
    ),
    (
        CHARACTER_SEGMENT,
        "a",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "'",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "\\",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "n",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "t",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        CHARACTER_SEGMENT,
        "한",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        UNICODE_START,
        "\\u{",
    ),
    (
        UNICODE_SEGMENT,
        "AC00",
    ),
    (
        UNICODE_END,
        "}",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        UNICODE_START,
        "\\u{",
    ),
    (
        UNICODE_SEGMENT,
        "AC",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        UNICODE_SEGMENT,
        "00",
    ),
    (
        UNICODE_END,
        "}",
    ),
    (
        CHARACTER_END,
        "'",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHARACTER_START,
        "'",
    ),
    (
        UNICODE_START,
        "\\u{",
    ),
    (
        UNICODE_SEGMENT,
        "AC00",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        UNICODE_END,
        "}",
    ),
    (
        CHARACTER_END,
        "'",
    ),
]
