compiler/danubec_lex/src/snapshots/danubec_lex__tests__empty_string.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        STRING_START,
        "\"",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"\"\"",
    ),
    (
        STRING_END,
        "\"\"\"",
    ),
]
