compiler/danubec_lex/src/snapshots/danubec_lex__tests__float.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1234567890",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0987654321",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "2",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "3",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "4",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "5",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "6",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "7",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "7",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "6",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "5",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "4",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "3",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "2",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        FRACTIONAL_SEGMENT,
        "1",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "2",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "3",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "4",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "5",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "6",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "7",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "7",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "6",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "5",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "4",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "3",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "2",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        FRACTIONAL_SEGMENT,
        "1",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1234567890",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0987654321",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1234567890",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0987654321",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENT_SIGN,
        "-",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENT_SIGN,
        "-",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "87",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "7",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "87",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        FRACTIONAL_PREFIX,
        ".",
    ),
    (
        FRACTIONAL_SEGMENT,
        "0",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "7",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENT_SIGN,
        "-",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENT_SIGN,
        "-",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "87",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENT_SIGN,
        "+",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "7",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "e",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "87",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        EXPONENTIAL_PREFIX,
        "E",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "10",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        EXPONENTIAL_SEGMENT,
        "7",
    ),
]
