compiler/danubec_lex/src/snapshots/danubec_lex__tests__hex.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        HEX_START,
        "0x",
    ),
    (
        HEX_SEGMENT,
        "0123456789ABCDEFabcdef",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        HEX_START,
        "0x",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        HEX_SEGMENT,
        "0123456789ABCDEFabcdef",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        HEX_START,
        "0x",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        HEX_SEGMENT,
        "0123456789ABCDEFabcdef",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        HEX_START,
        "0x",
    ),
    (
        HEX_SEGMENT,
        "01234",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        HEX_SEGMENT,
        "56789ABCDEFabcdef",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        HEX_START,
        "0x",
    ),
    (
        HEX_SEGMENT,
        "01234",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        HEX_SEGMENT,
        "56789ABCDEFabcdef",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        HEX_START,
        "0x",
    ),
    (
        HEX_SEGMENT,
        "0123456789ABCDEFabcdef",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        HEX_START,
        "0x",
    ),
    (
        HEX_SEGMENT,
        "0123456789ABCDEFabcdef",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
]
