compiler/danubec_lex/src/snapshots/danubec_lex__tests__identifier.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        PLACEHOLDER,
        "_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "_foo",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "_123",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "_foo123",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "foo",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "foo_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "foo123",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "foo123_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "foo_foo",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "foo_123",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "한글",
    ),
]
