compiler/danubec_lex/src/snapshots/danubec_lex__tests__integer.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1234567890",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "2",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "3",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "4",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "5",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "6",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "7",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "1",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "2",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "3",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "4",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "5",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "6",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "7",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "8",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "9",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        INTEGER_SEGMENT,
        "0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1234567890",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INTEGER_SEGMENT,
        "1234567890",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
]
