compiler/danubec_lex/src/snapshots/danubec_lex__tests__line_comment.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        LINE_COMMENT_START,
        "// ",
    ),
    (
        LINE_COMMENT_SEGMENT,
        "This is a line comment",
    ),
    (
        NEW_LINE,
        "\n",
    ),
    (
        LINE_COMMENT_START,
        "// ",
    ),
    (
        LINE_COMMENT_SEGMENT,
        "This is another line comment",
    ),
]
