compiler/danubec_lex/src/snapshots/danubec_lex__tests__non_multiline_string.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        STRING_START,
        "\"",
    ),
    (
        STRING_SEGMENT,
        "Hello, World!",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        STRING_SEGMENT,
        "a",
    ),
    (
        INTERPOLATION_START,
        "${",
    ),
    (
        IDENTIFIER,
        "b",
    ),
    (
        INTERPOLATION_END,
        "}",
    ),
    (
        STRING_SEGMENT,
        "c",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "'",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "\\",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "\\",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "n",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        ESCAPE_START,
        "\\",
    ),
    (
        ESCAPE_SEGMENT,
        "t",
    ),
    (
        STRING_END,
        "\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_START,
        "\"",
    ),
    (
        UNICODE_START,
        "\\u{",
    ),
    (
        UNICODE_SEGMENT,
        "AC00",
    ),
    (
        UNICODE_END,
        "}",
    ),
    (
        STRING_END,
        "\"",
    ),
]
