compiler/danubec_lex/src/snapshots/danubec_lex__tests__octal.snap
---
source: compiler/danubec_lex/src/tests.rs
expression: tokens
---
[
    (
        OCTAL_START,
        "0o",
    ),
    (
        OCTAL_SEGMENT,
        "01234567",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OCTAL_START,
        "0o",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        OCTAL_SEGMENT,
        "01234567",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OCTAL_START,
        "0o",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        OCTAL_SEGMENT,
        "01234567",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OCTAL_START,
        "0o",
    ),
    (
        OCTAL_SEGMENT,
        "01234",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        OCTAL_SEGMENT,
        "567",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OCTAL_START,
        "0o",
    ),
    (
        OCTAL_SEGMENT,
        "01234",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
    (
        OCTAL_SEGMENT,
        "567",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OCTAL_START,
        "0o",
    ),
    (
        OCTAL_SEGMENT,
        "01234567",
    ),
    (
        NUMERIC_SEPARATOR,
        "_",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        OCTAL_START,
        "0o",
    ),
    (
        OCTAL_SEGMENT,
        "01234567",
    ),
    (
        NUMERIC_SEPARATOR,
        "__",
    ),
]
